# memory-vault

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  LICENSE  README.md  SECURITY.md  docker-compose.yml  mcp.json.example  pyproject.toml  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  lint.yml  release.yml  test.yml
docs/: windows.md
docs/images/: architecture.mmd
migrations/: 001_initial_schema.sql  002_api_tokens.sql  003_knowledge_graph.sql  004_supersede_move.sql
scripts/: security-pentest.sh  start.sh
src/: cli.py  config.py  diagnose.py
src/adapters/: base.py  claude.py  markdown.py  plaintext.py
src/api/: __init__.py  app.py  deps.py  middleware.py  schemas.py  server.py
src/api/routers/: __init__.py  chat.py  chunks.py  graph.py  health.py  ingest.py  search.py  spaces.py
src/extraction/: __init__.py  graph_writer.py  spacy_extractor.py
src/mcp/: __main__.py  server.py
src/memory_vault/: cli.py  diagnose.py  logging_config.py
src/memory_vault/adapters/: base.py  claude.py  plaintext.py
src/memory_vault/api/: __init__.py  app.py  deps.py  middleware.py  server.py
src/memory_vault/extraction/: __init__.py  graph_writer.py
src/memory_vault/mcp/: __main__.py  server.py
src/memory_vault/models/: db.py
src/memory_vault/services/: embedding.py  ingestion.py  search.py
src/models/: db.py
src/services/: embedding.py  ingestion.py  search.py
tests/: conftest.py  test_adapters.py  test_api.py  test_api_routers.py  test_bad_input_matrix.py  test_chat_api.py  test_diagnose_redaction.py  test_extraction.py  test_graph_api.py  test_migration_003.py  test_recall_schema_compat.py  test_search.py  test_spaces_move_supersede.py  test_unicode_and_large_content.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  auth.ts  cytoscape-cose-bilkent.d.ts  index.css  main.tsx
web/src/components/: ErrorBanner.tsx  NetworkBanner.tsx  TokenGate.tsx
(+13 files in other folders)
